# arbor

./: model.py  mypm.toml  pyproject.toml  readme.md  setup.py
.mypm/env/matplotlib/3.3/: metadata.json
.mypm/env/numpy/1.20/: metadata.json
.mypm/env/pandas/1.5/: metadata.json
.mypm/env/pillow/7.0/: metadata.json
.mypm/env/scipy/1.6/: metadata.json
.mypm/env/sklearn/0.24/: metadata.json
.mypm/env/tensorflow/2.4/: metadata.json
.mypm/env/torch/2.0/: metadata.json
application/services/: graph_service.py  project_service.py
arbor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cli/: main.py  parser.py
cli/commands/: install.py
cli/commands/debug/: dump.py  graph.py  trace.py
cli/commands/dependency/: add.py  remove.py  show.py  update.py
cli/commands/environment/: clean.py  install.py  sync.py
cli/commands/project/: doctor.py  info.py  init.py
cli/commands/resolution/: conflicts.py  explain.py  resolve.py
data/: repository.json
domain/models/: constraint.py  dependency.py  graph.py  package.py  version.py
domain/resolver/: sat_resolver.py
infrastructure/persistence/lock/: lock_reader.py  lock_writer.py
infrastructure/persistence/toml/: reader.py  writer.py
infrastructure/repository/: local_repo.py
