[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbor-pm"
version = "0.1.0"
description = "Python Package Manager with SAT-Based Dependency Resolution"
readme = "readme.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["package-manager", "dependency-resolution", "SAT", "pypi"]
dependencies = [
    "python-sat>=0.1.8",
    "toml>=0.10",
]

[project.scripts]
arbor = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*", "domain*", "application*", "infrastructure*"]

[tool.setuptools.package-data]
"*" = ["data/*.json"]
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["data/*.json"]